--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header>
-        <a href="http://127.0.0.1:5500/index.html">
+        <a href="https://azero182.github.io/proyecto-poke/">
             <img src="./src/images/pokeball.png" alt="pokebola" class="logo">
         </a>
         <button id="boton-tema">
